V2 Minor fixes (#1054)
* Update custom.css

Reduced the size of the search field, as it overlaps in the mobile version.

* Update custom.css

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -64,3 +64,9 @@ p {
 .docusaurus-mt-lg {
   margin-top: 1.8rem;
 }
+
+@media (max-width: 996px){
+    .navbar__search-input {
+        width: 3rem;
+    }
+}
